tests/snapshots/json_fixtures__dependency_obligation.snap
---
source: crates/sniff-test/tests/json_fixtures.rs
expression: messages
---
[
  {
    "artifact": {
      "artifact-id": "[ARTIFACT_ID]",
      "crate-name": "dependency_app",
      "crate-types": [
        "lib"
      ],
      "extra-filename": "[EXTRA_FILENAME]",
      "manifest-path": "[FIXTURE]/app/Cargo.toml",
      "metadata": "[METADATA]",
      "package-name": "dependency-app",
      "package-version": "0.1.0",
      "target": null
    },
    "concrete-roots": 1,
    "counts": {
      "panic-obligations": 1,
      "raw-panic-paths": 0,
      "trusted-panic-obligations": 0
    },
    "dependencies": [
      {
        "artifact-id": "[ARTIFACT_ID]",
        "artifact-path": "[ARTIFACT_PATH]",
        "exact-cache-path": "[EXACT_CACHE_PATH]",
        "extern-name": "dependency_obligation"
      }
    ],
    "dependency-cache": {
      "hits": 1,
      "total": 1
    },
    "format-version": 1,
    "generic-roots": 0,
    "missing-roots": [],
    "reason": "sniff-test-artifact",
    "roots": [
      {
        "counts": {
          "panic-obligations": 1,
          "raw-panic-paths": 0,
          "trusted-panic-obligations": 0
        },
        "findings": [
          {
            "edge": "dependency_app::call_dependency --direct-call-> dependency_obligation::documented",
            "kind": "panic-obligation",
            "reason": "dependency_obligation::documented has a documented # Panics contract",
            "span": "src/lib.rs:2:5: 2:44",
            "target": "dependency_obligation::documented",
            "trace": [
              "src/lib.rs:2:5: 2:44: dependency_app::call_dependency --direct-call-> dependency_obligation::documented"
            ]
          }
        ],
        "has-panic-docs": false,
        "root": "dependency_app::call_dependency",
        "root-declaration": "src/lib.rs:1:1",
        "root-kind": "concrete"
      }
    ],
    "rustc-version": "[RUSTC_VERSION]",
    "scope": "workspace",
    "tool-version": "0.1.0"
  },
  {
    "artifact": {
      "artifact-id": "[ARTIFACT_ID]",
      "crate-name": "dependency_obligation",
      "crate-types": [
        "lib"
      ],
      "extra-filename": "[EXTRA_FILENAME]",
      "manifest-path": "[FIXTURE]/dep/Cargo.toml",
      "metadata": "[METADATA]",
      "package-name": "dependency-obligation",
      "package-version": "0.1.0",
      "target": null
    },
    "concrete-roots": 1,
    "counts": {
      "panic-obligations": 1,
      "raw-panic-paths": 0,
      "trusted-panic-obligations": 0
    },
    "dependencies": [],
    "dependency-cache": {
      "hits": 0,
      "total": 0
    },
    "format-version": 1,
    "generic-roots": 0,
    "missing-roots": [],
    "reason": "sniff-test-artifact",
    "roots": [
      {
        "counts": {
          "panic-obligations": 1,
          "raw-panic-paths": 0,
          "trusted-panic-obligations": 0
        },
        "findings": [
          {
            "edge": "report root documents panic behavior",
            "kind": "panic-obligation",
            "reason": "dependency_obligation::documented has a documented # Panics contract",
            "span": "[FIXTURE]/dep/src/lib.rs:3:1: 3:30",
            "target": "dependency_obligation::documented",
            "trace": []
          }
        ],
        "has-panic-docs": true,
        "root": "dependency_obligation::documented",
        "root-declaration": "[FIXTURE]/dep/src/lib.rs:3:1",
        "root-kind": "concrete"
      }
    ],
    "rustc-version": "[RUSTC_VERSION]",
    "scope": "dependency",
    "tool-version": "0.1.0"
  }
]
