tests/snapshots/json_fixtures__dyn_dispatch_call_site.snap
---
source: crates/sniff-test/tests/json_fixtures.rs
assertion_line: 67
expression: messages
---
[
  {
    "artifact": {
      "artifact-id": "[ARTIFACT_ID]",
      "crate-name": "dyn_dispatch_call_site",
      "crate-types": [
        "lib"
      ],
      "extra-filename": "[EXTRA_FILENAME]",
      "manifest-path": "[FIXTURE]/Cargo.toml",
      "metadata": "[METADATA]",
      "package-name": "dyn-dispatch-call-site",
      "package-version": "0.1.0",
      "target": null
    },
    "concrete-roots": 1,
    "counts": {
      "panic-obligations": 0,
      "raw-panic-paths": 1,
      "trusted-panic-obligations": 0
    },
    "dependencies": [],
    "dependency-cache": {
      "hits": 0,
      "total": 0
    },
    "format-version": 1,
    "generic-roots": 0,
    "missing-roots": [],
    "reason": "sniff-test-artifact",
    "roots": [
      {
        "counts": {
          "panic-obligations": 0,
          "raw-panic-paths": 1,
          "trusted-panic-obligations": 0
        },
        "findings": [
          {
            "edge": "<dyn_dispatch_call_site::Panicker as Runner>::run --direct-call-> core::std::rt::panic_fmt",
            "kind": "panic-invocation",
            "reason": "panic sink core::std::rt::panic_fmt",
            "span": "[SYSROOT]/lib/rustlib/src/rust/library/core/src/panic.rs:62:9: 62:73",
            "target": "core::std::rt::panic_fmt",
            "trace": [
              "src/lib.rs:15:5: 15:17: dyn_dispatch_call_site::entry --dyn-dispatch-vtable-entry-> <dyn_dispatch_call_site::Panicker as Runner>::run",
              "[SYSROOT]/lib/rustlib/src/rust/library/core/src/panic.rs:62:9: 62:73: <dyn_dispatch_call_site::Panicker as Runner>::run --direct-call-> core::std::rt::panic_fmt"
            ]
          }
        ],
        "has-panic-docs": false,
        "root": "dyn_dispatch_call_site::entry",
        "root-declaration": "src/lib.rs:13:1",
        "root-kind": "concrete"
      }
    ],
    "rustc-version": "[RUSTC_VERSION]",
    "scope": "workspace",
    "tool-version": "0.1.0"
  }
]
