tests/snapshots/json_fixtures__generic_roots.snap
---
source: crates/sniff-test/tests/json_fixtures.rs
expression: messages
---
[
  {
    "artifact": {
      "artifact-id": "[ARTIFACT_ID]",
      "crate-name": "generic_roots",
      "crate-types": [
        "lib"
      ],
      "extra-filename": "[EXTRA_FILENAME]",
      "manifest-path": "[FIXTURE]/Cargo.toml",
      "metadata": "[METADATA]",
      "package-name": "generic-roots",
      "package-version": "0.1.0",
      "target": null
    },
    "concrete-roots": 0,
    "counts": {
      "panic-obligations": 1,
      "raw-panic-paths": 1,
      "trusted-panic-obligations": 0
    },
    "dependencies": [],
    "dependency-cache": {
      "hits": 0,
      "total": 0
    },
    "format-version": 1,
    "generic-roots": 2,
    "missing-roots": [],
    "reason": "sniff-test-artifact",
    "roots": [
      {
        "counts": {
          "panic-obligations": 0,
          "raw-panic-paths": 1,
          "trusted-panic-obligations": 0
        },
        "findings": [
          {
            "edge": "generic_roots::generic_index --assert-> compiler assert index out of bounds: index `index` (_2, argument 2) may exceed length `_3` (temporary)",
            "kind": "compiler-assert",
            "reason": "compiler assert",
            "span": "src/lib.rs:2:6: 2:19",
            "target": "compiler assert index out of bounds: index `index` (_2, argument 2) may exceed length `_3` (temporary)",
            "trace": [
              "src/lib.rs:2:6: 2:19: generic_roots::generic_index --assert-> compiler assert index out of bounds: index `index` (_2, argument 2) may exceed length `_3` (temporary)"
            ]
          }
        ],
        "has-panic-docs": false,
        "root": "generic_roots::generic_index",
        "root-declaration": "src/lib.rs:1:1",
        "root-kind": "generic"
      },
      {
        "counts": {
          "panic-obligations": 1,
          "raw-panic-paths": 0,
          "trusted-panic-obligations": 0
        },
        "findings": [
          {
            "edge": "generic_roots::generic_split_at --direct-call-> core::slice::<impl [T]>::split_at",
            "kind": "panic-obligation",
            "reason": "core::slice::<impl [T]>::split_at has a documented # Panics contract",
            "span": "src/lib.rs:6:5: 6:27",
            "target": "core::slice::<impl [T]>::split_at",
            "trace": [
              "src/lib.rs:6:5: 6:27: generic_roots::generic_split_at --direct-call-> core::slice::<impl [T]>::split_at"
            ]
          }
        ],
        "has-panic-docs": false,
        "root": "generic_roots::generic_split_at",
        "root-declaration": "src/lib.rs:5:1",
        "root-kind": "generic"
      }
    ],
    "rustc-version": "[RUSTC_VERSION]",
    "scope": "workspace",
    "tool-version": "0.1.0"
  }
]
