tests/snapshots/json_fixtures__release_pruning.snap
---
source: crates/sniff-test/tests/json_fixtures.rs
expression: messages
---
[
  {
    "artifact": {
      "artifact-id": "[ARTIFACT_ID]",
      "crate-name": "release_pruning",
      "crate-types": [
        "lib"
      ],
      "extra-filename": "[EXTRA_FILENAME]",
      "manifest-path": "[FIXTURE]/Cargo.toml",
      "metadata": "[METADATA]",
      "package-name": "release-pruning",
      "package-version": "0.1.0",
      "target": null
    },
    "concrete-roots": 1,
    "counts": {
      "panic-obligations": 0,
      "raw-panic-paths": 1,
      "trusted-panic-obligations": 0
    },
    "dependencies": [],
    "dependency-cache": {
      "hits": 0,
      "total": 0
    },
    "format-version": 1,
    "generic-roots": 0,
    "missing-roots": [],
    "reason": "sniff-test-artifact",
    "roots": [
      {
        "counts": {
          "panic-obligations": 0,
          "raw-panic-paths": 1,
          "trusted-panic-obligations": 0
        },
        "findings": [
          {
            "edge": "release_pruning::checked_in_release --direct-call-> core::panicking::panic",
            "kind": "panic-invocation",
            "reason": "panic sink core::panicking::panic",
            "span": "src/lib.rs:6:5: 6:18",
            "target": "core::panicking::panic",
            "trace": [
              "src/lib.rs:6:5: 6:18: release_pruning::checked_in_release --direct-call-> core::panicking::panic"
            ]
          }
        ],
        "has-panic-docs": false,
        "root": "release_pruning::checked_in_release",
        "root-declaration": "src/lib.rs:5:1",
        "root-kind": "concrete"
      }
    ],
    "rustc-version": "[RUSTC_VERSION]",
    "scope": "workspace",
    "tool-version": "0.1.0"
  }
]
