tests/snapshots/json_fixtures__safe_markers.snap
---
source: crates/sniff-test/tests/json_fixtures.rs
expression: messages
---
[
  {
    "artifact": {
      "artifact-id": "[ARTIFACT_ID]",
      "crate-name": "safe_markers",
      "crate-types": [
        "lib"
      ],
      "extra-filename": "[EXTRA_FILENAME]",
      "manifest-path": "[FIXTURE]/Cargo.toml",
      "metadata": "[METADATA]",
      "package-name": "safe-markers",
      "package-version": "0.1.0",
      "target": null
    },
    "concrete-roots": 2,
    "counts": {
      "panic-obligations": 0,
      "raw-panic-paths": 2,
      "trusted-panic-obligations": 0
    },
    "dependencies": [],
    "dependency-cache": {
      "hits": 0,
      "total": 0
    },
    "format-version": 1,
    "generic-roots": 0,
    "missing-roots": [],
    "reason": "sniff-test-artifact",
    "roots": [
      {
        "counts": {
          "panic-obligations": 0,
          "raw-panic-paths": 1,
          "trusted-panic-obligations": 0
        },
        "findings": [
          {
            "edge": "safe_markers::helper --direct-call-> core::panicking::panic",
            "kind": "panic-invocation",
            "reason": "panic sink core::panicking::panic",
            "span": "src/lib.rs:21:5: 21:18",
            "target": "core::panicking::panic",
            "trace": [
              "src/lib.rs:17:5: 17:17: safe_markers::unsafe_call --direct-call-> safe_markers::helper",
              "src/lib.rs:21:5: 21:18: safe_markers::helper --direct-call-> core::panicking::panic"
            ]
          }
        ],
        "has-panic-docs": false,
        "root": "safe_markers::unsafe_call",
        "root-declaration": "src/lib.rs:16:1",
        "root-kind": "concrete"
      },
      {
        "counts": {
          "panic-obligations": 0,
          "raw-panic-paths": 1,
          "trusted-panic-obligations": 0
        },
        "findings": [
          {
            "edge": "safe_markers::unsafe_ratio --assert-> compiler assert attempt to divide `total` (_1, argument 1) by zero",
            "kind": "compiler-assert",
            "reason": "compiler assert",
            "span": "src/lib.rs:8:5: 8:24",
            "target": "compiler assert attempt to divide `total` (_1, argument 1) by zero",
            "trace": [
              "src/lib.rs:8:5: 8:24: safe_markers::unsafe_ratio --assert-> compiler assert attempt to divide `total` (_1, argument 1) by zero"
            ]
          }
        ],
        "has-panic-docs": false,
        "root": "safe_markers::unsafe_ratio",
        "root-declaration": "src/lib.rs:7:1",
        "root-kind": "concrete"
      }
    ],
    "rustc-version": "[RUSTC_VERSION]",
    "scope": "workspace",
    "tool-version": "0.1.0"
  }
]
